--- a/task-books/package.json
+++ b/task-books/package.json
@@ -20,9 +20,11 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "redux-form": "^8.3.10",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/redux-form": "^8.3.5",
