--- a/task-books/package.json
+++ b/task-books/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "json": "json-server --watch C:/Users/Vikas_Gundarapu/Desktop/vite-react-redux/task-books/src/db.json --port 9000"
+    "json": "json-server --watch src/db.json --port 9000"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
